syntax = "proto3";
package kratos.api;

option go_package = "github.com/shiqinfeng1/goMono/internal/trainer/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Adapter adapter = 2;
  Auth auth = 3;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Adapter {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  message TrainerGrpc {
    string addr = 1;
  }
  message UserGrpc {
    string addr = 1;
  }
  Database database = 1;
  Redis redis = 2;
  TrainerGrpc trainerGrpc = 3;
  UserGrpc userGrpc = 4;
}

message Auth {
  string service_key = 1;
  string api_key = 2;
}